mas-crm/force-app/main/default/objects/Case_Status_Transition__mdt/Case_Status_Transition__mdt.object-meta.xml
<CustomObject>
    <label>Case Status Transition</label>
    <pluralLabel>Case Status Transitions</pluralLabel>
    <description>Defines valid status transitions for service cases to maintain workflow integrity</description>
    <fields>
        <fullName>From_Status__c</fullName>
        <label>From Status</label>
        <required>true</required>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>To_Status__c</fullName>
        <label>To Status</label>
        <required>true</required>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <label>Is Active</label>
        <type>Checkbox</type>
        <defaultValue>true</defaultValue>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>1000</length>
    </fields>
</CustomObject>