mas-crm/force-app/main/default/objects/Case_Status_Transition__mdt/fields/To_Status__c.field-meta.xml
<CustomField>
    <fullName>To_Status__c</fullName>
    <label>To Status</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>